name:                acme-cutegirl
version:             0.1.0.0
synopsis:            Maybe gives you a cute girl
description:         A package whose sole reason of existance is to try and give
                     the user a cute girl.
homepage:            http://github.com/Fuuzetsu/acme-cutegirl
license:             GPL-3
license-file:        LICENSE
author:              Mateusz Kowalczyk
maintainer:          fuuzetsu@fuuzetsu.co.uk
category:            Acme
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Acme.CuteGirl
  build-depends:       base >=3 && <6
  hs-source-dirs:      src
  default-language:    Haskell2010

executable CuteGirl
  build-depends:       base >=3 && <6
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010